--- a/TRAINING/README
+++ b/TRAINING/README
@@ -1,4 +1,8 @@
 This version is the current one used by Angelina 2022-07-26
+2022-07-19 
+The use of the fmask is a mistake, it should be the tmask since this allows 
+to skip the vorticity value at the coast when applying the Shapiro filter
+
 2022-07-13 
 Then I changed it a bit to use the fmask instead tmask and also to mask 
 other spurious valeus of the wind curl that makes the Shapiro calculation 
