few little changes as titles ....

--- a/OTHERS/WOA09_StabilityCheck.ipynb
+++ b/OTHERS/WOA09_StabilityCheck.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Track potential density inversion in the original WOA09 dataset "
+    "# Track potential density inversion in the original WOA09 dataset, i.e. on the original 1deg resolution "
    ]
   },
   {
